Squash some bugs

--- a/src/app/lyrics/lyrics.component.css
+++ b/src/app/lyrics/lyrics.component.css
@@ -1,40 +1,19 @@
 .songMetadata {
-    float: left;
+  float: left;
 }
 
 .songButtons {
-    float: right;
+  float: right;
 }
 
-/* 4 columns for anything wider than 2256px */
 .lyrics {
-    display: inline-block;
-    width: 100%;
-    font-family: 'Courier New', Courier, monospace;
-    font-size: 12px;
-    overflow: visible;
-    white-space: pre-wrap;    
-    color: rgb(144, 200, 219);
-    column-gap: 7px; 
-    column-count: 4;
-}
-
-/* 3 columns for any width between 1024px and 1280px */
- @media (max-width: 2256px) {
- .lyricsColumns {
-   column-count: 3;
-  }
-  }
-
-/* 2 columns for any width between 640px and 1024px */
-@media (max-width: 1024px) {
-  .lyricsColumns {
-    column-count: 2;
-  }
-}
-
-@media (max-width: 640px) {
-.lyricsColumns {
-  column-count: 1;
-  }
+  display: inline-block;
+  width: 100%;
+  font-family: 'Courier New', Courier, monospace;
+  font-size: var(--default-font-size);
+  overflow: visible;
+  white-space: pre-wrap;
+  color: rgb(144, 200, 219);
+  column-count: var(--lyrics-column-count);
+  column-gap: 7px;
 }
